cmake_minimum_required(VERSION 3.0.0)
option(CROSS_COMPILE "Cross compile for Android" off)
option(CROSS_COMPILE_TOOLCHAIN_DIR "Directory for cross-compile toolchain" "")
if(CROSS_COMPILE)
	set(CMAKE_SYSTEM_NAME Linux)
	set(CMAKE_FIND_ROOT_PATH ${CROSS_COMPILE_TOOLCHAIN_DIR})
	set(CMAKE_CXX_COMPILER ${CROSS_COMPILE_TOOLCHAIN_DIR}/bin/aarch64-linux-android-g++)
	set(CMAKE_C_COMPILER   ${CROSS_COMPILE_TOOLCHAIN_DIR}/bin/aarch64-linux-android-gcc)
endif()

project(KAIMyEntitySaba VERSION 1.3.13)
find_package (Bullet REQUIRED)
include_directories(. ./bullet)
file(GLOB SabaBase "./Saba/Base/*.cpp")
file(GLOB SabaModel "./Saba/Model/MMD/*.cpp")
add_library(KAIMyEntitySaba SHARED com_kAIS_KAIMyEntity_NativeFunc.cpp KAIMyEntitySaba.cpp ${SabaBase} ${SabaModel})
target_link_libraries(KAIMyEntitySaba PRIVATE ${BULLET_LIBRARIES})