cmake_minimum_required(VERSION 3.2)
project(KAIMyEntitySaba VERSION 1.3.13)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
find_package (Bullet REQUIRED)
include_directories(${BULLET_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/saba/external/tinyobjloader/include)
include_directories(${PROJECT_SOURCE_DIR}/saba/external/tinyxfileloader/include)
include_directories(${PROJECT_SOURCE_DIR}/saba/src)
include_directories(${PROJECT_SOURCE_DIR}/saba/external/spdlog/include)
include_directories(${PROJECT_SOURCE_DIR}/saba/external/glm/include)
include_directories(${PROJECT_SOURCE_DIR}/saba/external/stb/include)
add_subdirectory(saba/src)
add_library(KAIMyEntitySaba SHARED com_kAIS_KAIMyEntity_NativeFunc.cpp KAIMyEntitySaba.cpp)
target_link_libraries(KAIMyEntitySaba PRIVATE ${BULLET_LIBRARIES} Saba)